--- a/public/css/components/servicios-academia/asesorias-especializadas.css
+++ b/public/css/components/servicios-academia/asesorias-especializadas.css
@@ -51,8 +51,10 @@
     gap: 10px;
     box-sizing: border-box;
     scroll-behavior: smooth;
-    margin-left: 5%;
+    margin-left: 4%;
+    margin-right: calc(4%-0px);
 }
+
 @media (min-width:2000px ){
     .comoSolicitarAsesoriasCardsContainer{
         width: 85%;
@@ -90,19 +92,23 @@
 }
 /* Estilos de la figura de la card */
 .comoSolicitarAsesoriasCardFigure {
-    display: flex;
-    align-items: flex-end; 
-    fill: rgba(18, 18, 56, 0.90);
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    width: 104%;
+    height: auto;
     position: absolute;
-    margin-left: 0 ;
+    bottom: -1%;
     left: 0;
-    margin-left: -3px;
-    width: 102%;
-    height: 102%;
+    right: 0;
+    display: flex;
+    justify-content: center;
+    transform: translateX(-2%); 
+    
 }
 
-
+.comoSolicitarAsesoriasCardFigure svg {
+    width: 98%;
+    height: auto; 
+    display: block;
+}
 /* Estilo para el titulo de la card */
 .comoSolicitarAsesoriasCardTitle {
     width:90%;
@@ -131,7 +137,7 @@
     bottom: 20px;
     left: 40px;
 }
-@media (max-width: 1100px){
+@media (max-width: 1200px){
     .comoSolicitarAsesoriasCardContent{
         font-size: 25px;
         left: 20px;
