--- a/public/css/components/servicios-academia/desarrollo-de-cursos-especializados.css
+++ b/public/css/components/servicios-academia/desarrollo-de-cursos-especializados.css
@@ -47,6 +47,7 @@
     gap: 34px;
     box-sizing: border-box;
     margin-left: 5%;
+    margin-right: 5%;
 }
 @media (min-width:2000px){
     .queOfrecemosCardsContainer{
@@ -70,6 +71,7 @@
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     position: relative;
     display: flex;
+    overflow: visible;
     /*justify-content: center;*/
 }
 
@@ -87,7 +89,7 @@
 
 /* Estilos de la figura de la card */
 .queOfrecemosCardFigure {
-    width: 100%;
+    width: 120%;
     display: flex;
     align-items: flex-start; 
     height: auto;
