--- a/public/css/nosotros.css
+++ b/public/css/nosotros.css
@@ -321,7 +321,7 @@
 }
 trayectoriaContent {
     width: 100%;
-    height: 1048px;
+    height: 80%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -333,7 +333,7 @@ trayectoriaContent {
     /* max-width: 1728px; */
     width: 100%;  /* Asegura que ocupe el ancho disponible hasta el max-width */
 
-    height: 399px;
+    height: 500px; /* Altura fija o ajustable según el diseño */
     display: flex; /* Esto afecta a los hijos de .contenidotray */
 
     /* --- Cambios para centrar --- */
@@ -354,7 +354,7 @@ trayectoriaContent {
 
 /*Texto del carrusel Trayectoria*/
 .contenidotraytxt {
-    width: 70%;
+    width: 65%;
     flex-shrink: 0;
     color: #FFFCFC;
     text-align: justify;
@@ -363,7 +363,7 @@ trayectoriaContent {
     font-style: normal;
     font-weight: 400;
     line-height: 40px;
-    letter-spacing: 0.32px;
+    letter-spacing: 0.5px;
 }
 
 /*Contenedor Colaboraciones*/
