--- a/public/css/components/servicios-academia/acceso-a-laboratorio.css
+++ b/public/css/components/servicios-academia/acceso-a-laboratorio.css
@@ -6,7 +6,8 @@
     flex-wrap: wrap;
     justify-content: center;
     align-content: flex-start;
-    
+    padding-right: 5%;
+    padding-left: 5%;   
 }
 
 /* Estilos del titulo de la sección */
@@ -47,8 +48,9 @@
     gap: 20px;
     width: 100%;
     box-sizing: border-box;
-    padding: 10px;
-    scroll-behavior: smooth; /* opcional pero se ve chido */
+   
+    scroll-behavior: smooth;
+  
 }
 
 
@@ -59,7 +61,7 @@
 
 /* Estilo de las cards de la subsección "Pasos para reservación" */
 .pasoParaReservacionCard {
-    flex: 0 0 calc(33.33% - 80px); 
+    flex: 0 0 calc(33.33% - 15px); 
     height: auto;
     flex-shrink: 0;
     border-radius: 16px;
@@ -67,18 +69,24 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 20px;
-    margin-left: 5%;
+   
+   
 }
-@media(max-width:1000px){
+
+@media(max-width:1200px){
     .pasoParaReservacionCard{
-        flex: 0 0 calc(50% - 60px)
+        flex: 0 0 calc(50% - 10px)
     }
 
 }
-@media(max-width:500px){
+@media(max-width:700px){
     .pasoParaReservacionCard{
-        flex: 0 0 calc(100% - 40px);
+        flex: 0 0 calc(100% - 10px);
+    }
+}
+@media(max-width:400px){
+    .pasoParaReservacionCard{
+        flex: 0 0 calc(100% );
     }
 }
 /* Estilo de número de paso */
