--- a/public/css/academica.css
+++ b/public/css/academica.css
@@ -91,3 +91,60 @@
     height: 2px;
     background: #DADADA;
 }
+@media (max-width: 768px) {
+  
+  .titulonosotros {
+    margin-bottom: 4vh;
+    padding: 0 10px;
+  }
+
+  .titulonosotrostxt {
+    font-size: 36px;
+    letter-spacing: 0.02em;
+    text-align: center;
+  }
+
+  .img1 {
+    height: 50vh;
+    object-fit: cover;
+  }
+
+  .contenidonosotros {
+    flex-direction: column;
+    padding: 20px;
+    margin-bottom: 0;
+  }
+
+  .contenidonosotrostxt {
+    font-size: 15px;
+    width: 100%;
+  }
+
+  .linea1,
+  .linea2,
+  .linea3 {
+    width: 90%;
+  }
+
+  .separador2,
+  .separador3 {
+    height: 4vh;
+  }
+}
+@media (min-width: 768px) and (max-width: 1024px) and (min-height: 512px) and (max-height: 1366px){
+    .contenidonosotrostxt{
+        font-size: 17px;
+    }
+
+    .titulonosotrostxt{
+        font-size: 40px;
+    }
+
+    .img1{
+        height: 45vh;
+    }
+
+    .linea2{
+        width:526px;
+    }
+}
