--- a/public/css/components/home/clientes.css
+++ b/public/css/components/home/clientes.css
@@ -61,3 +61,38 @@
         transform: translateX(-50%);
     }
 }
+
+@media (max-width: 450px) {
+.clientes-container {
+  width: 100%;
+  height: 250px;
+  overflow: hidden;
+  position: relative;
+}
+
+.img-wrapper {
+  width: 200%;
+  height: 100%;
+  background: url('../../../img/clientes-1.png') repeat-x;
+  background-size: contain;
+  animation: move 20s linear infinite;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.img-wrapper::before,
+.img-wrapper::after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    background: url('../../../img/clientes-1.png');
+    background-repeat: repeat-x;
+    background-position: center center;
+    background-size: cover;
+    display: block;
+    position: absolute;
+    top: 0;
+}
+
+}
