--- a/public/css/components/home/principal-tarjetas.css
+++ b/public/css/components/home/principal-tarjetas.css
@@ -117,3 +117,145 @@
     left: 80px;
     top: 88px;
 }
+
+/* iPhone SE (375px) */
+@media (max-width: 390px) {
+  .cards-container {
+    flex-direction: column;
+    align-items: center;
+    gap: 32px;
+  }
+
+  .card {
+    width: 90%;
+    height: auto;
+    gap: 40px;
+    padding: 24px 0;
+  }
+
+  .card-figure svg {
+    width: 100%;
+    height: auto;
+  }
+
+  .title-card {
+    font-size: 24px;
+  }
+
+  .card-button {
+    width: 220px;
+    height: 50px;
+    font-size: 16px;
+  }
+
+  .card:hover .card-button {
+    width: 240px;
+    height: 55px;
+    font-size: 18px;
+  }
+
+  #nuestros-servicios-title,
+  #nosotros-title,
+  #investigacion-title {
+    position: static;
+    width: 100%;
+    text-align: center;
+    margin-top: 16px;
+  }
+}
+
+@media (max-width: 450px) {
+  .cards-container {
+    flex-direction: column;
+    align-items: center;
+    gap: 32px;
+    padding: 0 16px;
+  }
+
+  .card {
+    width: 100%;
+    height: auto;
+    gap: 40px;
+    padding: 24px 0;
+  }
+
+  .card-figure svg {
+    width: 100%;
+  }
+
+  .title-card {
+    font-size: 24px;
+    text-align: center;
+  }
+
+  .card-button {
+    width: 100%;
+    max-width: 240px;
+    height: 50px;
+    font-size: 16px;
+  }
+
+  .card:hover .card-button {
+    width: 100%;
+    max-width: 260px;
+    height: 55px;
+    font-size: 18px;
+  }
+
+  #nuestros-servicios-title,
+  #nosotros-title,
+  #investigacion-title {
+    text-align: center;
+    margin-top: 16px;
+    left: 0 !important;
+  }
+
+  .card-figure{
+    width: 103%;
+    margin-top: -8.5%
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1024px) and (min-height: 512px) and (max-height: 1366px){
+    .cards-container {
+        flex-wrap: wrap;
+        gap: 35px;
+        padding: 0 16px;
+      }
+    
+    .card {
+        flex: 0 0 auto;
+        margin-right: 0px;
+        width: 230px;
+        height: 380px;
+        gap: 120px;
+    }
+    .card-button{
+        width: 210.638px;
+        height: 52px;
+        font-size: 14px;
+    }
+
+    .title-card{
+        font-size: 28px;
+    }
+    .card-figure svg {
+        height: 153px;
+    }
+
+    #nuestros-servicios-title {
+        left: -4px;
+        top: 30px;
+    }
+
+    #nosotros-title{
+        left: -4px;
+        top: 30px;
+    }
+
+    #investigacion-title {
+        left: -18px;
+        top: 35px;
+    }
+
+}
