--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,26 +1,26 @@
+.separador2, .separador3, .separador4, .separador5, .separador6 {
+    width: 100%;
+    margin: 0 auto;
+}
+
 .separador2 {
     height: 160px;
-    width: 100%;
 }
 
 .separador3 {
     height: 104px;
-    width: 100%;
 }
 
 .separador4 {
     height: 120px;
-    width: 100%;
 }
 
 .separador5 {
     height: 80px;
-    width: 100%;
 }
 
 .separador6 {
     height: 143.75px;
-    width: 100%;
 }
 
 .lineContainer {
@@ -28,20 +28,67 @@
     display: flex;
     justify-content: center;
 }
-/*1418*/
-/***** Linea separatoria *****/
+
 .line {
     width: 100%;
     max-width: 1418px;
-    height: 0px;
+    height: 0;
     flex-shrink: 0;
     stroke-width: 3px;
     stroke: rgba(191, 191, 191, 0.20);
 }
 
+/* Media Query para pantallas más pequeñas */
+@media (max-width: 1024px) {
+    .separador2 {
+        height: 120px;
+    }
+
+    .separador3 {
+        height: 80px;
+    }
+
+    .separador4 {
+        height: 100px;
+    }
+
+    .separador5 {
+        height: 60px;
+    }
+
+    .separador6 {
+        height: 120px;
+    }
+
+    .line {
+        max-width: 100%;
+    }
+}
+
+/* Media Query para pantallas aún más pequeñas (móviles) */
 @media (max-width: 568px) {
     .separador2 {
         height: 80px;
+    }
+
+    .separador3 {
+        height: 60px;
+    }
+
+    .separador4 {
+        height: 80px;
+    }
+
+    .separador5 {
+        height: 40px;
+    }
+
+    .separador6 {
+        height: 80px;
+    }
+
+    .line {
+        max-width: 100%;
     }
 
     .carousel img {
