--- a/public/css/components/servicios-industria/servicios-para-la-industria.css
+++ b/public/css/components/servicios-industria/servicios-para-la-industria.css
@@ -41,3 +41,10 @@
     text-align: justify;
     hyphens: auto;
 }
+@media(max-width:500px){
+   .serviciosParaLaIndustriaDescription{
+        
+        font-size:22px;
+       
+    }
+}
