--- a/public/css/components/servicios-industria/desarrollo-de-prototipos.css
+++ b/public/css/components/servicios-industria/desarrollo-de-prototipos.css
@@ -69,3 +69,11 @@
     padding-right: 50px;
     align-items:center;
 }
+
+@media(max-width:500px){
+    .creacion-de-prototipo-text{
+    
+        font-size:22px;
+       
+    }
+}
